2024-04-29T01:04:13Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8871812057 # 225
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-29
* notice: last 14d: unq all: 22 161
* notice: prev accum: outdated-unq outdated-all / unq all: 619 3311 / 648 3541
* notice: next accum: outdated-unq outdated-all / unq all: 622 3380 / 648 3541
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-04-14] / []

2024-04-28T16:16:25Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8868852499 # 224
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-28
* notice: last 14d: unq all: 22 184
* notice: prev accum: outdated-unq outdated-all / unq all: 619 3311 / 647 3539
* notice: next accum: outdated-unq outdated-all / unq all: 619 3311 / 648 3541
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -2 -46 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2024-04-14 2024-04-28]

2024-04-27T16:16:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8861087739 # 221
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-27
* notice: last 14d: unq all: 23 228
* notice: prev accum: outdated-unq outdated-all / unq all: 619 3311 / 646 3537
* notice: next accum: outdated-unq outdated-all / unq all: 619 3311 / 647 3539
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +3 +23 -0 -0 / 3 23
* notice: removed / changed dates: [] / [2024-04-27]

2024-04-27T08:17:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8858498250 # 220