@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-29T01:04:13Z",
-  "count_outdated" : 3380,
-  "uniques_outdated" : 622,
+  "timestamp" : "2024-04-30T01:02:54Z",
+  "count_outdated" : 3382,
+  "uniques_outdated" : 623,
   "count" : 3541,
   "uniques" : 648,
   "views" : [
-    {
-      "timestamp": "2024-04-15T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-16T00:00:00Z",
       "count": 4,
