@@ -1,12 +1,7 @@
 {
-  "count": 161,
+  "count": 159,
   "uniques": 22,
   "views": [
-    {
-      "timestamp": "2024-04-15T00:00:00Z",
-      "count": 2,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-16T00:00:00Z",
       "count": 4,
